--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <div id="name__block" class="block">
                 <div class="inline-block w-auto">
                     <p>First Name *</p>
-                    <input id="form__firstName__input" class="form__input" />
+                    <input id="form__firstName__input" type="text" class="form__input" />
                 </div>
 
                 <div class="inline-block w-auto">
                     <p>Last Name *</p>
-                    <input id="form__lastName__input" class="form__input" />
+                    <input id="form__lastName__input" type="text" class="form__input" />
                 </div>
             </div>
 
@@ -31,43 +31,43 @@
             <div id="contact__block" class="block">
                 <div class="inline-block w-auto">
                     <p>Email *</p>
-                    <input id="form__email__input" class="form__input" />
+                    <input id="form__email__input" type="text" class="form__input" />
                 </div>
                 <div class="inline-block w-auto">
                     <p>Phone</p>
-                    <input id="form__phone__input" class="form__input" />
+                    <input id="form__phone__input" type="text" class="form__input" />
                 </div>
             </div>
 
             <div class="inline-block relative pr-2">Create account?</div>
-            <input id="create__account__checkbox" class="inline-block mr-8 mb-4 mt-2 leading-tight" type="checkbox"
+            <input id="create__account__checkbox" type="checkbox" class="inline-block mr-8 mb-4 mt-2 leading-tight"
                 autocomplete="off" />
 
             <div id="form__password__block" class="block hidden password-disguised">
                 <div>
                     <p>Password *</p>
-                    <input id="form__password__1" class="form__input" type="password" placeholder="**********"
+                    <input id="form__password__1" type="password" class="form__input" placeholder="**********"
                         autocomplete="off" />
                 </div>
 
                 <div>
                     <p>Reenter Password *</p>
-                    <input id="form__password__2" class="form__input" type="password" placeholder="**********"
+                    <input id="form__password__2" type="password" class="form__input" placeholder="**********"
                         autocomplete="off" />
                 </div>
                 <div class="mt-2">
-                    <input id="form__password__show" class="not-password inline-block mr-1 leading-tight"
-                        type="checkbox" autocomplete="off" />
+                    <input id="form__password__show" type="checkbox" class="not-password inline-block mr-1 leading-tight"
+                        autocomplete="off" />
                     <p class="inline-block mb-2"> Show Password? </p>
                 </div>
                 <div class="mt-4">
                     <div class="block mb-1">
-                        <input id="" class="not-password inline-block mr-1 leading-tight" type="checkbox"
+                        <input type="checkbox" class="not-password inline-block mr-1 leading-tight"
                             autocomplete="off" checked />
                         <p class="inline-block"> Send me awesome offers/spam please! </p>
                     </div>
                     <div class="block">
-                        <input id="" class="not-password inline-block mr-1 leading-tight" type="checkbox"
+                        <input type="checkbox" class="not-password inline-block mr-1 leading-tight"
                             autocomplete="off" checked />
                         <p class="inline-block mb-4"> Send me slightly less aggressive spam please! </p>
                     </div>
@@ -78,20 +78,20 @@
             <select id="form__select__country" class="form__input"></select>
 
             <p>Address *</p>
-            <input id="form__address__input" class="form__input mb-2" placeholder="Address 1" />
-            <input class="block form__input" placeholder="Address 2 (Optional)" />
+            <input id="form__address__input" type="text" class="form__input mb-2" placeholder="Address 1" />
+            <input class="block form__input" type="text" placeholder="Address 2 (Optional)" />
 
             <p>City *</p>
-            <input id="form__city__input" class="block form__input" />
+            <input id="form__city__input" type="text" class="block form__input" />
 
             <div id="state__block" class="block">
-                <div id="form__select__state__block" class="inline-block hidden">
+                <div id="form__select__state__block" class="inline-block">
                     <p>State *</p>
                     <select id="form__select__state" class="form__input"></select>
                 </div>
                 <div class="inline-block">
                     <p>Zipcode *</p>
-                    <input id="form__zip__input" class="form__input" />
+                    <input id="form__zip__input" type="text" class="form__input" />
                 </div>
             </div>
 
