--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 
 <body>
     <div>
-        <form>
+        <form action="#0">
             <p class="text-2xl mb-1 tracking-wide font-mono">Shipping Information</p>
             <hr class="w-2/6 mb-4" />
 
             <div id="name__block" class="block">
                 <div class="inline-block w-auto">
                     <p>First Name *</p>
-                    <input id="form__firstName__input" type="text" class="form__input" />
+                    <input id="form__firstName__input" type="text" class="form__input" required />
                 </div>
 
                 <div class="inline-block w-auto">
                     <p>Last Name *</p>
-                    <input id="form__lastName__input" type="text" class="form__input" />
+                    <input id="form__lastName__input" type="text" class="form__input" required />
                 </div>
             </div>
 
@@ -31,11 +31,11 @@
             <div id="contact__block" class="block">
                 <div class="inline-block w-auto">
                     <p>Email *</p>
-                    <input id="form__email__input" type="text" class="form__input" />
+                    <input id="form__email__input" type="text" class="form__input" required />
                 </div>
                 <div class="inline-block w-auto">
                     <p>Phone</p>
-                    <input id="form__phone__input" type="text" class="form__input" />
+                    <input id="form__phone__input" type="text" class="form__input" required />
                 </div>
             </div>
 
@@ -47,14 +47,17 @@
                 <div>
                     <p>Password *</p>
                     <input id="form__password__1" type="password" class="form__input" placeholder="**********"
-                        autocomplete="off" />
+                        autocomplete="off" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" />
                 </div>
 
                 <div>
                     <p>Reenter Password *</p>
                     <input id="form__password__2" type="password" class="form__input" placeholder="**********"
-                        autocomplete="off" />
+                        autocomplete="off" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" />
                 </div>
+                <div class="requirements">
+                    Your password must be at least 6 characters as well as contain at least one uppercase, one lowercase, and one number.
+                  </div>
                 <div class="mt-2">
                     <input id="form__password__show" type="checkbox" class="not-password inline-block mr-1 leading-tight"
                         autocomplete="off" />
@@ -75,23 +78,23 @@
             </div>
 
             <p>Country *</p>
-            <select id="form__select__country" class="form__input"></select>
+            <select id="form__select__country" class="form__input" required></select>
 
             <p>Address *</p>
-            <input id="form__address__input" type="text" class="form__input mb-2" placeholder="Address 1" />
+            <input id="form__address__input" type="text" class="form__input mb-2" placeholder="Address 1" required />
             <input class="block form__input" type="text" placeholder="Address 2 (Optional)" />
 
             <p>City *</p>
-            <input id="form__city__input" type="text" class="block form__input" />
+            <input id="form__city__input" type="text" class="block form__input" required />
 
             <div id="state__block" class="block">
                 <div id="form__select__state__block" class="inline-block">
                     <p>State *</p>
-                    <select id="form__select__state" class="form__input"></select>
+                    <select id="form__select__state" class="form__input" required></select>
                 </div>
                 <div class="inline-block">
                     <p>Zipcode *</p>
-                    <input id="form__zip__input" type="text" class="form__input" />
+                    <input id="form__zip__input" type="text" class="form__input" required />
                 </div>
             </div>
 
