--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <input id="form__password__1" type="password" class="form__input" placeholder="**********"
                         autocomplete="off" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" />
                 </div>
-                <div id="form__password__requirements" class="requirements text-red-500 font-bold">
+                <div id="form__password__requirements" class="requirements text-red-500 font-bold hidden">
                     Your password must be at least 6 characters as well as contain at least one uppercase, one
                     lowercase, and one number.
                 </div>
